WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31871
REGRESSION (
r50704
): Incorrect property caching due to flattenDictionaryStructure (breaks google maps)
https://bugs.webkit.org/show_bug.cgi?id=31871
Summary
REGRESSION (r50704): Incorrect property caching due to flattenDictionaryStruc...
koenvanderdrift
Reported
2009-11-25 07:12:08 PST
When loading a Google maps page, many of the buttons in the map view are shifted around and/or not working. For instance, the street view puppet is not usable, and even disappears from the screen. This only occurs with the recent nightly builds since about 2 weeks. The regualr Safari 4.0.4 does not do this and Google maps works as expected.
Attachments
Patch
(12.94 KB, patch)
2010-01-15 12:14 PST
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
fabien.coeurjoly
Comment 1
2009-12-10 08:35:19 PST
I can confirm this bug on a PowerPC machine too. This bug has been introduced recently, and apparently it seems to happen when JIT is disabled (which is obviously the case on PPC architecture). The bug can also be reproduced on x86 when JIT is disabled.
Alexey Proskuryakov
Comment 2
2009-12-10 14:13:39 PST
See also:
bug 32153
.
Alexey Proskuryakov
Comment 3
2009-12-10 14:15:01 PST
<
rdar://problem/7461971
>
Geoffrey Garen
Comment 4
2010-01-15 12:14:14 PST
Created
attachment 46696
[details]
Patch
Oliver Hunt
Comment 5
2010-01-15 12:16:03 PST
Comment on
attachment 46696
[details]
Patch r=me, assuming no perf hit
Geoffrey Garen
Comment 6
2010-01-15 12:49:14 PST
Committed
r53341
: <
http://trac.webkit.org/changeset/53341
>
Geoffrey Garen
Comment 7
2010-01-15 12:51:00 PST
***
Bug 33446
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug